crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__preview_no_blank_line_before_docstring.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/cases/preview_no_blank_line_before_docstring.py
---
## Input

```python
# flags: --preview
def line_before_docstring():

    """Please move me up"""


class LineBeforeDocstring:

    """Please move me up"""


class EvenIfThereIsAMethodAfter:

    """I'm the docstring"""
    def method(self):
        pass


class TwoLinesBeforeDocstring:


    """I want to be treated the same as if I were closer"""


class MultilineDocstringsAsWell:

    """I'm so far

    and on so many lines...
    """
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,12 +1,15 @@
+# flags: --preview
 def line_before_docstring():
     """Please move me up"""
 
 
 class LineBeforeDocstring:
+
     """Please move me up"""
 
 
 class EvenIfThereIsAMethodAfter:
+
     """I'm the docstring"""
 
     def method(self):
@@ -14,10 +17,12 @@
 
 
 class TwoLinesBeforeDocstring:
+
     """I want to be treated the same as if I were closer"""
 
 
 class MultilineDocstringsAsWell:
+
     """I'm so far
 
     and on so many lines...
```

## Ruff Output

```python
# flags: --preview
def line_before_docstring():
    """Please move me up"""


class LineBeforeDocstring:

    """Please move me up"""


class EvenIfThereIsAMethodAfter:

    """I'm the docstring"""

    def method(self):
        pass


class TwoLinesBeforeDocstring:

    """I want to be treated the same as if I were closer"""


class MultilineDocstringsAsWell:

    """I'm so far

    and on so many lines...
    """
```

## Black Output

```python
def line_before_docstring():
    """Please move me up"""


class LineBeforeDocstring:
    """Please move me up"""


class EvenIfThereIsAMethodAfter:
    """I'm the docstring"""

    def method(self):
        pass


class TwoLinesBeforeDocstring:
    """I want to be treated the same as if I were closer"""


class MultilineDocstringsAsWell:
    """I'm so far

    and on so many lines...
    """
```


