crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__preview_pattern_matching_long.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/cases/preview_pattern_matching_long.py
---
## Input

```python
# flags: --preview --minimum-version=3.10
match x:
    case "abcd" | "abcd" | "abcd" :
        pass
    case "abcd" | "abcd" | "abcd" | "abcd" | "abcd" | "abcd" | "abcd" | "abcd" | "abcd" | "abcd" | "abcd" | "abcd" | "abcd" | "abcd" | "abcd":
        pass
    case xxxxxxxxxxxxxxxxxxxxxxx:
        pass
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,3 +1,4 @@
+# flags: --preview --minimum-version=3.10
 match x:
     case "abcd" | "abcd" | "abcd":
         pass
```

## Ruff Output

```python
# flags: --preview --minimum-version=3.10
match x:
    case "abcd" | "abcd" | "abcd":
        pass
    case (
        "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
    ):
        pass
    case xxxxxxxxxxxxxxxxxxxxxxx:
        pass
```

## Black Output

```python
match x:
    case "abcd" | "abcd" | "abcd":
        pass
    case (
        "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
        | "abcd"
    ):
        pass
    case xxxxxxxxxxxxxxxxxxxxxxx:
        pass
```


