crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__preview_pattern_matching_trailing_comma.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/cases/preview_pattern_matching_trailing_comma.py
---
## Input

```python
# flags: --preview --minimum-version=3.10
match maybe, multiple:
    case perhaps, 5:
        pass
    case perhaps, 6,:
        pass


match more := (than, one), indeed,:
    case _, (5, 6):
        pass
    case [[5], (6)], [7],:
        pass
    case _:
        pass
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,3 +1,4 @@
+# flags: --preview --minimum-version=3.10
 match maybe, multiple:
     case perhaps, 5:
         pass
@@ -8,13 +9,16 @@
         pass
 
 
-match more := (than, one), indeed,:
+match (
+    more := (than, one),
+    indeed,
+):
     case _, (5, 6):
         pass
-    case (
+    case [
         [[5], (6)],
         [7],
-    ):
+    ]:
         pass
     case _:
         pass
```

## Ruff Output

```python
# flags: --preview --minimum-version=3.10
match maybe, multiple:
    case perhaps, 5:
        pass
    case (
        perhaps,
        6,
    ):
        pass


match (
    more := (than, one),
    indeed,
):
    case _, (5, 6):
        pass
    case [
        [[5], (6)],
        [7],
    ]:
        pass
    case _:
        pass
```

## Black Output

```python
match maybe, multiple:
    case perhaps, 5:
        pass
    case (
        perhaps,
        6,
    ):
        pass


match more := (than, one), indeed,:
    case _, (5, 6):
        pass
    case (
        [[5], (6)],
        [7],
    ):
        pass
    case _:
        pass
```


