crates/ruff_python_formatter/tests/snapshots/black_compatibility@cases__preview_pep_572.py.snap
---
source: crates/ruff_python_formatter/tests/fixtures.rs
input_file: crates/ruff_python_formatter/resources/test/fixtures/black/cases/preview_pep_572.py
---
## Input

```python
# flags: --preview
x[(a:=0):]
x[:(a:=0)]
```

## Black Differences

```diff
--- Black
+++ Ruff
@@ -1,2 +1,3 @@
-x[(a := 0):]
-x[:(a := 0)]
+# flags: --preview
+x[(a := 0) :]
+x[: (a := 0)]
```

## Ruff Output

```python
# flags: --preview
x[(a := 0) :]
x[: (a := 0)]
```

## Black Output

```python
x[(a := 0):]
x[:(a := 0)]
```


